# gedit-sessionsaver

./: .cvsignore  AUTHORS  BUGS  ChangeLog  ChangeLog-20090414  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  configure.in  gedit-2.3.pc.in  gedit-plugins.doap  message-of-doom  sessionsaver.plugin
plugins/: .cvsignore  ChangeLog  ChangeLog-20011116  Makefile.am
plugins/ASCII/: Makefile.am  ascii.c  ascii.gedit-plugin.desktop.in  asciitable.glade2
plugins/bookmarks/: Makefile.am  bookmarks.gedit-plugin.desktop.in  bookmarks.gedit-plugin.desktop.in.in  bookmarks.plugin.desktop.in.in  gedit-bookmarks-plugin.c  gedit-bookmarks-plugin.h
plugins/bookmarks/messages/: gedit-bookmarks-message-add.c  gedit-bookmarks-message-add.h  gedit-bookmarks-message-goto-next.c  gedit-bookmarks-message-goto-next.h  gedit-bookmarks-message-goto-previous.c  gedit-bookmarks-message-goto-previous.h  gedit-bookmarks-message-remove.c  gedit-bookmarks-message-remove.h  gedit-bookmarks-message-toggle.c  gedit-bookmarks-message-toggle.h  messages.h
plugins/bracketcompletion/: Makefile.am  bracketcompletion.gedit-plugin.desktop.in  bracketcompletion.gedit-plugin.desktop.in.in  bracketcompletion.plugin.desktop.in.in  bracketcompletion.py
plugins/browse/: Makefile.am  browse.c  browse.glade
plugins/charmap/: Makefile.am  charmap.gedit-plugin.desktop.in  charmap.gedit-plugin.desktop.in.in  charmap.plugin.desktop.in.in  gedit-charmap-panel.c  gedit-charmap-panel.h  gedit-charmap-plugin.c  gedit-charmap-plugin.h
plugins/charmap/charmap/: Makefile.am  __init__.py  panel.py
plugins/codecomment/: .cvsignore  Makefile.am  codecomment.gedit-plugin.desktop.in  codecomment.gedit-plugin.desktop.in.in  codecomment.plugin.desktop.in.in  codecomment.py
plugins/colorpicker/: Makefile.am  colorpicker.gedit-plugin.desktop.in  colorpicker.gedit-plugin.desktop.in.in  colorpicker.plugin.desktop.in.in  colorpicker.py
plugins/commander/: Makefile.am  commander.gedit-plugin.desktop.in.in  commander.plugin.desktop.in.in
plugins/commander/commander/: Makefile.am  __init__.py  drawing.py  entry.py  history.py  info.py  modules.py  transparentwindow.py  utils.py  windowactivatable.py  windowhelper.py
plugins/commander/modules/: Makefile.am  align.py  bookmark.py  doc.py  edit.py  format.py  goto.py  grep.py  help.py  move.py  reload.py  set.py  shell.py
plugins/convert/: Makefile.am  convert.c  convert.glade
plugins/cvschangelog/: .cvsignore  Makefile.am  cvschangelog.c  cvschangelog.gedit-plugin.desktop.in
plugins/dashboard/: Makefile.am  dashboard.plugin.desktop.in.in
plugins/diff/: Makefile.am  diff.c  diff.gedit-plugin.desktop.in  diff.glade2
plugins/drawspaces/: Makefile.am  drawspaces.gedit-plugin.desktop.in  drawspaces.gedit-plugin.desktop.in.in  drawspaces.glade  drawspaces.plugin.desktop.in.in  drawspaces.py  drawspaces.ui  gedit-drawspaces-plugin.c  gedit-drawspaces-plugin.h  gedit-drawspaces-plugin.ui  gedit-drawspaces.gresource.xml  gedit-drawspaces.schemas.in  org.gnome.gedit.drawspaces.gschema.in  org.gnome.gedit.drawspaces.gschema.xml  org.gnome.gedit.drawspaces.gschema.xml.in.in  org.gnome.gedit.plugins.drawspaces.gschema.xml.in.in
plugins/email/: Makefile.am  email.c  email.glade2
plugins/indent/: Makefile.am  indent.c  indent.gedit-plugin.desktop.in
plugins/joinlines/: Makefile.am  joinlines.gedit-plugin.desktop.in  joinlines.gedit-plugin.desktop.in.in  joinlines.plugin.desktop.in.in  joinlines.py
plugins/multiedit/: Makefile.am  multiedit.gedit-plugin.desktop.in.in  multiedit.plugin.desktop.in.in
plugins/reverse/: Makefile.am  reverse.c
plugins/sessionsaver/: Makefile.am  __init__.py  dialogs.py  sessionsaver.gedit-plugin.desktop.in  sessionsaver.gedit-plugin.desktop.in.in  sessionsaver.glade  sessionsaver.plugin.desktop.in.in  sessionsaver.ui  store.py
plugins/shell_output/: Makefile.am  shell_output.c  shell_output.gedit-plugin.desktop.in  shell_output.glade2
plugins/showtabbar/: .cvsignore  Makefile.am  gedit-show-tabbar-plugin.c  gedit-show-tabbar-plugin.h  gedit-show-tabbar-plugin.schemas.in  org.gnome.gedit.showtabbar.gschema.xml.in.in  showtabbar.gedit-plugin.desktop.in  showtabbar.gedit-plugin.desktop.in.in
plugins/smartspaces/: Makefile.am  smartspaces.gedit-plugin.desktop.in  smartspaces.gedit-plugin.desktop.in.in  smartspaces.plugin.desktop.in.in  smartspaces.py
plugins/sort/: Makefile.am  sort.c  sort.gedit-plugin.desktop.in  sort.glade2
plugins/synctex/: Makefile.am  synctex.gedit-plugin.desktop.in.in  synctex.plugin.desktop.in.in
plugins/taglist/: HTML.tags  HTML.tags.xml.in  Latex.tags  Latex.tags.xml.in  Makefile.am  XSLT.tags  XSLT.tags.xml.in  XUL.tags.xml.in  gedit-taglist-plugin-panel.c  gedit-taglist-plugin-panel.h  gedit-taglist-plugin-parser.c  gedit-taglist-plugin-parser.h  gedit-taglist-plugin-window.c  gedit-taglist-plugin-window.h  gedit-taglist-plugin.c  gedit-taglist-plugin.h  taglist.gedit-plugin.desktop.in  taglist.gedit-plugin.desktop.in.in  taglist.plugin.desktop.in.in
plugins/terminal/: Makefile.am  org.gnome.gedit.plugins.terminal.gschema.xml.in.in  terminal.gedit-plugin.desktop.in  terminal.gedit-plugin.desktop.in.in  terminal.plugin.desktop.in.in  terminal.py
plugins/textsize/: Makefile.am  textsize.gedit-plugin.desktop.in.in  textsize.plugin.desktop.in.in
plugins/wordcompletion/: Makefile.am  gedit-word-completion-plugin.c  gedit-word-completion-plugin.h  wordcompletion.gedit-plugin.desktop.in.in  wordcompletion.plugin.desktop.in.in
po/: ChangeLog  ChangeLog-20011116  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  (+61 more)
quickies/: Makefile  quickies.gedit-plugin  quickies.glade  quickies.py
sessionsaver/: Makefile.am  __init__.py  dialogs.py  gpdefs.py  sessionsaver.plugin.desktop.in.in  store.py
(+33 files in other folders)
